# Perfetto-Skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml  upstream-canary.yml  upstream-sync.yml  verify.yml
catalog/: smartperfetto-export.json
docs/: architecture.md  compatibility.md  migration-coverage.md
docs/maintenance/: upstream-sync.md
evals/: evals.json
fixtures/: NOTICE  README.md  manifest.json  privacy-scan-v1.json  privacy-scan-v2.json
skills/perfetto-performance-analysis/: SKILL.md
src/: README.md  symbol-aliases.json
src/overrides/: schema.json
tests/: support.py
tests/fixtures/: README.md
tests/integration/: test_comparison.py  test_fixture_manifest.py  test_local_sql_overlays.py  test_pipeline.py  test_real_trace.py  test_skill_runner.py
tests/unit/: test_all_query_validation.py  test_android_skills_sync.py  test_bootstrap.py  (+28 more)
tools/: build_fixture_pack.py  build_release.py  check_cross_repo_impact.py  compile_skill.py  download_declared_fixtures.py  download_fixture_pack.py  export_from_smartperfetto.py  fixture_manifest.py  install.py  overlays.py  scan_fixture_privacy.py  sync_android_skills.py  sync_official_skill.py  sync_perfetto_stdlib.py  sync_smartperfetto.py  upstream_locks.py  upstream_skill_inventory.py  validate_all_queries.py  validate_catalog.py  verify.py
upstreams/: android-skills-decisions.json  android-skills.lock.json  fixture-pack.lock.json  google-perfetto.lock.json  official-skill-decisions.json  smartperfetto.lock.json
(+58 files in other folders)
