[project]
name = "perfetto-skills-dev"
version = "0.2.0"
description = "Development and validation tooling for Perfetto Skills"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = []

[project.optional-dependencies]
dev = [
  "PyYAML==6.0.2",
  "skills-ref==0.1.1",
]

[tool.uv]
package = false
